--- a/fsd-projects/bouncing-box/index.html
+++ b/fsd-projects/bouncing-box/index.html
@@ -80,6 +80,9 @@
          * If the box drifts off the screen, turn it around!
          */
         function update() {
+          moveBoxTo(200);
+          moveBoxTo(450);
+          moveBoxTo(-20);
 
         
 
